@@ -91,7 +91,7 @@ class ezcConsoleProgressbarOptions extends ezcBaseOptions
             case "fractionFormat":
             case "actFormat":
             case "maxFormat":
-                if ( strlen( $value ) < 1 )
+                if ( is_string( $value ) === false || strlen( $value ) < 1 )
                 {
                     throw new ezcBaseValueException( $key, $value, 'string, not empty' );
                 }
