@@ -58,7 +58,7 @@ class ezcConsoleProgressMonitorOptions extends ezcBaseOptions
         switch ( $key )
         {
             case "formatString":
-                if ( strlen( $value ) < 1 )
+                if ( is_string( $value ) === false || strlen( $value ) < 1 )
                 {
                     throw new ezcBaseValueException( $key, $value, 'string, not empty' );
                 }
