@@ -5,6 +5,7 @@
   default value, if multiple-option is set to true.
 - Fixed issue #9902: [ConsoleTools] Problems on Windows.
 - Fixed issue #10594: ezcConsole*Options throw incorrect exceptions.
+- Fixed issue #10595: ezcConsole*Options perform improper string checks.
 
 1.2 - Monday 18 December 2006
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
